2007-12-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpptdemux.c: (gst_rtp_pt_demux_finalize),
	(gst_rtp_pt_demux_setup), (gst_rtp_pt_demux_release),
	(gst_rtp_pt_demux_change_state):
	* gst/rtpmanager/gstrtpssrcdemux.c: (gst_rtp_ssrc_demux_reset),
	(gst_rtp_ssrc_demux_dispose), (gst_rtp_ssrc_demux_src_query),
	(gst_rtp_ssrc_demux_change_state):
	Clean up the dynamic pads when going to READY.

2007-12-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_finalize),
	(gst_rtp_bin_set_sdes_string), (gst_rtp_bin_get_sdes_string),
	(gst_rtp_bin_handle_message):
	* gst/rtpmanager/rtpsession.c: (rtp_session_finalize),
	(rtp_session_send_bye):
	* gst/rtpmanager/rtpsource.c: (rtp_source_finalize):
	Fix some leaks.

2007-12-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/dts/gstdtsdec.c: (gst_dtsdec_init),
	  (gst_dtsdec_sink_setcaps), (gst_dtsdec_chain_raw),
	  (gst_dtsdec_chain):
	* ext/dts/gstdtsdec.h:
	  Add support for "audio/x-private1-dts" as used by flupsparse. Most
	  changes adapted from a52dec.

2007-12-11  David Schleef  <ds@schleef.org>

	* sys/glsink/Makefile.am:
	* sys/glsink/glimagesink.c:
	* sys/glsink/glvideo.c:
	* sys/glsink/glvideo.h:
	  Split out gl-related code into a separate file with a
	  sensible API.  Major cleanup.  Still crashes occasionally
	  due to different threads touching bits at the same time.

2007-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Wouter Cloetens <wouter at mind dot be>

	* ext/soup/gstsouphttpsrc.c: (_do_init),
	(gst_souphttp_src_class_init), (gst_souphttp_src_init),
	(gst_souphttp_src_dispose), (gst_souphttp_src_set_property),
	(gst_souphttp_src_get_property), (unicodify),
	(gst_souphttp_src_unicodify), (gst_souphttp_src_create),
	(gst_souphttp_src_start), (gst_souphttp_src_stop),
	(gst_souphttp_src_unlock), (gst_souphttp_src_unlock_stop),
	(gst_souphttp_src_get_size), (gst_souphttp_src_is_seekable),