@@ -1,0 +1,23 @@
+
+videoparse
+==========
+
+The videoparse element is used to parse a file containing raw image
+data.
+
+
+Creating example data
+=====================
+
+gst-launch videotestsrc num_buffers=300 ! \
+  video/x-raw-yuv,format=\(fourcc\)I420,width=320,height=240 ! \
+  filesink location=raw
+
+
+Reading example data
+====================
+
+gst-launch filesrc location=raw ! \
+  videoparse format=I420 width=320 height=240 framerate=30/1 ! \
+  xvimagesink
+
